--- a/src/css/base.css
+++ b/src/css/base.css
@@ -358,6 +358,16 @@ a:focus-visible {
 	.grid__cell-c1-r4 { grid-column: 4; grid-row: 3; }
 	.grid__cell-c3-r4 { grid-column: 1; grid-row: 4; }
 	.grid__cell-c3-r5 { grid-column: 2; grid-row: 4; }
+	.grid__cell-c4-r4 { grid-column: 4; grid-row: 4; }
+	.grid__cell-c1-r5 { grid-column: 1; grid-row: 5; }
+	.grid__cell-c3-r5 { grid-column: 3; grid-row: 5; }
+	.grid__cell-c4-r5 { grid-column: 4; grid-row: 5; }
+	.grid__cell-c1-r6 { grid-column: 1; grid-row: 6; }
+	.grid__cell-c2-r6 { grid-column: 2; grid-row: 6; }
+	.grid__cell-c3-r6 { grid-column: 3; grid-row: 6; }
+	.grid__cell-c2-r7 { grid-column: 2; grid-row: 7; }
+	.grid__cell-c3-r7 { grid-column: 3; grid-row: 7; }
+	.grid__cell-c4-r7 { grid-column: 4; grid-row: 7; }
 	.grid--mini {
 		visibility: visible;
 		position: relative;
