--- a/src/css/base.css
+++ b/src/css/base.css
@@ -146,6 +146,8 @@ a:focus-visible {
 	font-size: 1rem;
 	font-weight: 400;
 	margin: 0 0 2rem 0;
+	line-height: 1.5rem;
+	color: #858A8B;
 }
 
 .frame__links {
@@ -351,13 +353,15 @@ a:focus-visible {
 	.grid__cell--padded {
 		padding: var(--grid-padding);
 	}
+	.grid__cell-c3-r2 { grid-column: 3; grid-row: 2; }
+	.grid__cell-c1-r3 { grid-column: 1; grid-row: 3; }
+
 	.grid__cell-c1-r1 { grid-column: 2; grid-row: 1; }
 	.grid__cell-c3-r1 { grid-column: 3; grid-row: 1; }
 	.grid__cell-c4-r1 { grid-column: 4; grid-row: 1; }
 	.grid__cell-c1-r2 { grid-column: 1; grid-row: 2; }
 	.grid__cell-c2-r2 { grid-column: 2; grid-row: 2; }
-	.grid__cell-c3-r2 { grid-column: 2; grid-row: 2; }
-	.grid__cell-c4-r2 { grid-column: 4; grid-row: 2; }
+	.grid__cell-c2-r2 { grid-column: 2; grid-row: 2; }
 	.grid__cell-c2-r3 { grid-column: 2; grid-row: 3; }
 	.grid__cell-c4-r3 { grid-column: 3; grid-row: 3; }
 	.grid__cell-c1-r4 { grid-column: 4; grid-row: 3; }
