--- a/src/css/base.css
+++ b/src/css/base.css
@@ -346,9 +346,40 @@ a:focus-visible {
 		display: flex;
 		justify-content: flex-end;
 	}
+
+	.side_bar_container{
+		width: 6%;
+		height: 100%;
+		position: fixed;
+		top: 0;
+		left: 0;
+		background-color: white;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		align-items: center;
+	}
+	.side_bar_title_prop{
+		writing-mode: vertical-lr;
+		width: 6%;
+	}
+	.side_bar_contents_container{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	.side_bar_contents_emoji{
+
+	}
+	.side_bar_contents_text{
+
+	}
+
 	.grid {
 		grid-template-columns: repeat(4,25%);
 		width: 94%;
+		margin-bottom: 7rem;
 	}
 	.grid__cell--padded {
 		padding: var(--grid-padding);
