--- a/src/css/base.css
+++ b/src/css/base.css
@@ -166,7 +166,7 @@ a:focus-visible {
 
 .grid {
 	display: grid;
-	--grid-border-radius: 8px;
+	--grid-border-radius: 0px;
 	grid-template-columns: repeat(2,50%);
 	margin-bottom: 7rem;
 }
@@ -210,7 +210,7 @@ a:focus-visible {
 	width: calc(100% - var(--grid-padding) * 2);
 	height: calc(100% - var(--grid-padding) * 2);
 	margin: var(--grid-padding);
-	border-radius: var(--grid-border-radius);
+	/* border-radius: var(--grid-border-radius); */
 	display: block;
 	position: relative;
 	overflow: hidden;
@@ -297,12 +297,12 @@ a:focus-visible {
 
 .slide-nav__img--prev {
 	transform: translateY(-100%);
-	border-radius: 0 0 1.5vw 1.5vw;
+	/* border-radius: 0 0 1.5vw 1.5vw; */
 }
 
 .slide-nav__img--next {
 	transform: translateY(100%);
-	border-radius: 1.5vw 1.5vw 0 0;
+	/* border-radius: 1.5vw 1.5vw 0 0; */
 }
 
 .slide-nav__img-inner {
