--- a/src/css/base.css
+++ b/src/css/base.css
@@ -266,6 +266,8 @@ a:focus-visible {
 
 .content__item-heading {
 	font-size: 1.5vw;
+	font-weight: 400;
+	font-family: 'Outfit', sans-serif;
 	color: var(--color-hashtag-title);
 	line-height: 1;
 	margin: 1rem 0 3rem 0;
