--- a/src/css/base.css
+++ b/src/css/base.css
@@ -379,20 +379,36 @@ a:focus-visible {
 		align-items: center;
 	}
 	.side_bar_title_prop{
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		writing-mode: vertical-lr;
 		width: 6%;
+		font-family: 'Outfit', sans-serif;
+		font-weight: 400;
+		font-size: .7rem;
+		color: #858A8B;
+		margin-bottom: 1.1rem;
 	}
 	.side_bar_contents_container{
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		margin-top: .6rem;
+    margin-bottom: .1rem;
+		font-weight: 400;
+		font-family: 'Outfit', sans-serif;
 	}
 	.side_bar_contents_emoji{
-
+		display: flex;
+		justify-content: center;
+		font-size: 1.8rem;
+		
 	}
 	.side_bar_contents_text{
-
+		font-size: .8rem;
+		margin-top: .2rem;
 	}
 
 	.grid {
