--- a/src/css/base.css
+++ b/src/css/base.css
@@ -331,16 +331,27 @@ a:focus-visible {
 }
 
 .back {
-	background: none;
+	opacity: 0;
+	pointer-events: none;
+	stroke: #000;
+	color: #282d2f;
+	z-index: 1000;
+	cursor: pointer;
+	width: 10rem;
+	background-color: #fff;
 	border: 0;
-	padding: 0;
-	margin: auto 0 1.5rem 0;
-    opacity: 0;
-    pointer-events: none;
-    stroke: #000;
-    z-index: 1000;
-    cursor: pointer;
-    width: 50px;
+	border-radius: 100px;
+	justify-content: center;
+	align-items: center;
+	margin: auto 0 1.5rem;
+	padding: 0.7rem 1rem;
+	font-family: Outfit,sans-serif;
+	font-size: .7rem;
+	font-weight: 400;
+	display: flex;
+	position: absolute;
+	top: 5vh;
+	box-shadow: -3px 4px 100px -11px grey;
 }
 
 .back svg {
@@ -350,7 +361,7 @@ a:focus-visible {
 .back:hover,
 .back:focus {
 	outline: none;
-	stroke: #823725;
+	/* stroke: #823725; */
 }
 
 .content--open .back {
