--- a/src/css/base.css
+++ b/src/css/base.css
@@ -639,17 +639,22 @@ a:focus-visible {
 	display: flex;
 	flex-direction: row;
 	margin: .5rem 0;
+	justify-content: flex-start;
+	align-items: center;
 
 }
 .footer_author_emoji{
-
+	margin-right: .5rem;
+	font-size: 1.2rem;
 }
 .footer_author_name{
+	margin-right: .5rem;
 
 }
 .footer_url_container{
 
 }
 .footer_url_contents_prop{
+	margin-right: .5rem;
 
 }
