--- a/src/css/base.css
+++ b/src/css/base.css
@@ -369,6 +369,156 @@ a:focus-visible {
 	pointer-events: auto;
 }
 
+@media screen and (max-width: 53em){
+	.footer_container{
+		width: 100%;
+		height: 100vh;
+		z-index: 101;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background-image: url("../img/footer_bg.svg");
+		background-size: cover;
+	}
+	.footer_top_container{
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 5rem;
+	}
+	.footer_title_container{
+		display: flex;
+		flex-direction: column;
+		width: 75%;
+		height: 100%;
+		margin-top: 3rem;
+	}
+	.footer_title_prop{
+		display: flex;
+		flex-direction: row;
+		font-family: 'Outfit', sans-serif;
+		color: #DBDFE0;
+		font-size: 2rem;
+		/* margin: 1rem 0; */
+		font-weight: 300;
+		line-height: 2.5rem;
+		letter-spacing: 0em;
+		text-align: left;
+	}
+	.footer_nav_container{
+		display: flex;
+		flex-direction: column;
+		width: 75%;
+		height: 100%;
+		justify-content: flex-start;
+		align-items: flex-start;
+		margin-top: 2rem;
+	}
+	.footer_nav_prop{
+		font-family: 'Outfit', sans-serif;
+		color:#DBDFE0;
+		font-size: 1rem;
+		font-weight: 400;
+		line-height: 30px;
+		letter-spacing: 0em;
+		text-align: left;
+		transition: all .3s ease-in-out;
+	}
+	.footer_nav_prop:nth-child(2){
+		font-size: .7rem;
+	}
+	.footer_nav_prop:nth-child(3){
+		/* margin-top: 1.5rem; */
+	}
+	.footer_nav_prop:nth-child(4){
+		/* margin-top: 7rem; */
+		font-size: .9rem;
+		text-decoration: underline;
+		margin-top: 2rem;
+	}
+	.footer_nav_prop:hover{
+		color: #858A8B;
+		transition: all .3s ease-in-out;
+		cursor: pointer;
+	}
+
+	.footer_divider{
+		border-bottom: 1px #858A8B solid;
+		width: 75%;
+	}
+
+	.footer_bottom_container{
+		width: 100%;
+		height: 20%;
+		display: flex;
+		flex-direction: column-reverse;
+		justify-content: center;
+		align-items: center;
+		margin-top: 3rem;
+	}
+	.footer_copyright{
+		font-family: 'Outfit', sans-serif;
+		font-size: .7rem;
+		font-weight: 400;
+		line-height: 18px;
+		letter-spacing: 0em;
+		text-align: left;
+		color: #858A8B;
+		width: 75%;
+
+	}
+	.footer_author_container{
+		display: flex;
+		flex-direction: column;
+		width: 75%;
+	}
+	.footer_author_each_container{
+		display: flex;
+		flex-direction: column;
+		font-family: 'Outfit', sans-serif;
+		font-size: .7rem;
+		font-weight: 400;
+		line-height: 18px;
+		letter-spacing: 0em;
+		text-align: left;
+		color: #858A8B;
+		margin-top: 1rem;
+
+	}
+	.footer_responsibility{
+		
+
+	}
+	.footer_author_detailed_container{
+		display: flex;
+		flex-direction: row;
+		margin: .3rem 0;
+		justify-content: flex-start;
+		align-items: center;
+
+	}
+	.footer_author_emoji{
+		margin-right: .3rem;
+		font-size: .7rem;
+	}
+	.footer_author_name{
+		margin-right: .3rem;
+
+	}
+	.footer_url_container{
+
+	}
+	.footer_url_contents_prop{
+		margin-right: .3rem;
+		width: 50%;
+	}
+}
+
+
 @media screen and (min-width: 53em) {
 	.content {
 		width: 38%;
@@ -378,6 +528,149 @@ a:focus-visible {
 		flex-direction: column;
 		justify-content: flex-end;
 		align-items: flex-end;
+	}
+	/* footer */
+	.footer_container{
+		width: 100%;
+		height: 100vh;
+		z-index: 101;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background-image: url("../img/footer_bg.svg");
+		background-size: cover;
+	}
+	.footer_top_container{
+		width: 65%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 5rem;
+	}
+	.footer_title_container{
+		display: flex;
+		flex-direction: column;
+		width: 60%;
+		height: 100%;
+		margin-top: -2rem;
+	}
+	.footer_title_prop{
+		font-family: 'Outfit', sans-serif;
+		color: #DBDFE0;
+		font-size: 80px;
+		font-weight: 300;
+		line-height: 101px;
+		letter-spacing: 0em;
+		text-align: left;
+	}
+	.footer_nav_container{
+		display: flex;
+		flex-direction: column;
+		width: 30%;
+		height: 100%;
+		justify-content: flex-start;
+		align-items: flex-start;
+		margin-top: 2rem;
+	}
+	.footer_nav_prop{
+		font-family: 'Outfit', sans-serif;
+		color:#DBDFE0;
+		font-size: 1.4rem;
+		font-weight: 400;
+		line-height: 30px;
+		letter-spacing: 0em;
+		text-align: left;
+		transition: all .3s ease-in-out;
+	}
+	.footer_nav_prop:nth-child(2){
+		font-size: .9rem;
+	}
+	.footer_nav_prop:nth-child(3){
+		margin-top: 1.5rem;
+	}
+	.footer_nav_prop:nth-child(4){
+		margin-top: 7rem;
+		font-size: .9rem;
+		text-decoration: underline;
+	}
+	.footer_nav_prop:hover{
+		color: #858A8B;
+		transition: all .3s ease-in-out;
+		cursor: pointer;
+	}
+
+	.footer_divider{
+		border-bottom: 1px #858A8B solid;
+		width: 65%;
+	}
+
+	.footer_bottom_container{
+		width: 65%;
+		height: 20%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: flex-end;
+		margin-top: 3rem;
+	}
+	.footer_copyright{
+		font-family: 'Outfit', sans-serif;
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 18px;
+		letter-spacing: 0em;
+		text-align: left;
+		color: #858A8B;
+		width: 70%;
+
+	}
+	.footer_author_container{
+		display: flex;
+		flex-direction: column;
+		width: 30%;
+	}
+	.footer_author_each_container{
+		display: flex;
+		flex-direction: column;
+		font-family: 'Outfit', sans-serif;
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 18px;
+		letter-spacing: 0em;
+		text-align: left;
+		color: #858A8B;
+		margin-top: 2rem;
+
+	}
+	.footer_responsibility{
+		
+
+	}
+	.footer_author_detailed_container{
+		display: flex;
+		flex-direction: row;
+		margin: .5rem 0;
+		justify-content: flex-start;
+		align-items: center;
+
+	}
+	.footer_author_emoji{
+		margin-right: .5rem;
+		font-size: 1.2rem;
+	}
+	.footer_author_name{
+		margin-right: .5rem;
+
+	}
+	.footer_url_container{
+
+	}
+	.footer_url_contents_prop{
+		margin-right: .5rem;
+
 	}
 
 	.side_bar_container{
@@ -515,146 +808,3 @@ a:focus-visible {
     }
 }
 
-/* footer */
-.footer_container{
-	width: 100%;
-	height: 100vh;
-	z-index: 101;
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	background-image: url("../img/footer_bg.svg");
-	background-size: cover;
-}
-.footer_top_container{
-	width: 65%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	margin-bottom: 5rem;
-}
-.footer_title_container{
-	display: flex;
-	flex-direction: column;
-	width: 60%;
-	height: 100%;
-	margin-top: -2rem;
-}
-.footer_title_prop{
-	font-family: 'Outfit', sans-serif;
-	color: #DBDFE0;
-	font-size: 80px;
-	font-weight: 300;
-	line-height: 101px;
-	letter-spacing: 0em;
-	text-align: left;
-}
-.footer_nav_container{
-	display: flex;
-	flex-direction: column;
-	width: 30%;
-	height: 100%;
-	justify-content: flex-start;
-	align-items: flex-start;
-	margin-top: 2rem;
-}
-.footer_nav_prop{
-	font-family: 'Outfit', sans-serif;
-	color:#DBDFE0;
-	font-size: 1.4rem;
-	font-weight: 400;
-	line-height: 30px;
-	letter-spacing: 0em;
-	text-align: left;
-	transition: all .3s ease-in-out;
-}
-.footer_nav_prop:nth-child(2){
-	font-size: .9rem;
-}
-.footer_nav_prop:nth-child(3){
-	margin-top: 1.5rem;
-}
-.footer_nav_prop:nth-child(4){
-	margin-top: 7rem;
-	font-size: .9rem;
-	text-decoration: underline;
-}
-.footer_nav_prop:hover{
-	color: #858A8B;
-	transition: all .3s ease-in-out;
-	cursor: pointer;
-}
-
-.footer_divider{
-	border-bottom: 1px #858A8B solid;
-	width: 65%;
-}
-
-.footer_bottom_container{
-	width: 65%;
-	height: 20%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: flex-end;
-	margin-top: 3rem;
-}
-.footer_copyright{
-	font-family: 'Outfit', sans-serif;
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 18px;
-	letter-spacing: 0em;
-	text-align: left;
-	color: #858A8B;
-	width: 70%;
-
-}
-.footer_author_container{
-	display: flex;
-	flex-direction: column;
-	width: 30%;
-}
-.footer_author_each_container{
-	display: flex;
-	flex-direction: column;
-	font-family: 'Outfit', sans-serif;
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 18px;
-	letter-spacing: 0em;
-	text-align: left;
-	color: #858A8B;
-	margin-top: 2rem;
-
-}
-.footer_responsibility{
-	
-
-}
-.footer_author_detailed_container{
-	display: flex;
-	flex-direction: row;
-	margin: .5rem 0;
-	justify-content: flex-start;
-	align-items: center;
-
-}
-.footer_author_emoji{
-	margin-right: .5rem;
-	font-size: 1.2rem;
-}
-.footer_author_name{
-	margin-right: .5rem;
-
-}
-.footer_url_container{
-
-}
-.footer_url_contents_prop{
-	margin-right: .5rem;
-
-}
