--- a/src/css/base.css
+++ b/src/css/base.css
@@ -179,7 +179,7 @@ a:focus-visible {
 }
 
 .grid--large {
-	grid-auto-rows: 32vmin;
+	grid-auto-rows: 30vmin;
 	padding: 0.5vw;
 	--grid-padding: 0.5vw;
 }
@@ -199,6 +199,9 @@ a:focus-visible {
 .grid__cell {
 	display: grid;
 	align-items: end;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .grid--mini .grid__cell:not(.grid__cell--current):hover .grid__cell-img {
@@ -307,6 +310,7 @@ a:focus-visible {
 	overflow: hidden;
 	opacity: 0.3;
 	cursor: not-allowed;
+	/* cursor: pointer; */
 	background-size: cover;
 }
 
@@ -365,11 +369,98 @@ a:focus-visible {
 	/* stroke: #823725; */
 }
 
+.back_to_about{
+	/* opacity: 0; */
+	z-index: 1;
+	stroke: #000;
+	color: #282d2f;
+	z-index: 1000;
+	cursor: pointer;
+	width: 9rem;
+	background-color: #fff;
+	border: 0;
+	border-radius: 100px;
+	justify-content: center;
+	align-items: center;
+	margin: 0 1.5rem;
+	padding: 0.7rem 1rem;
+	font-family: Outfit,sans-serif;
+	font-size: .7rem;
+	font-weight: 400;
+	display: flex;
+	position: absolute;
+	top: 3vh;
+	box-shadow: -3px 4px 100px -11px grey;
+}
+
 .content--open .back {
 	pointer-events: auto;
 }
 
 @media screen and (max-width: 53em){
+	.back_to_about{
+		/* opacity: 0; */
+		z-index: 1;
+		stroke: #000;
+		color: #282d2f;
+		z-index: 1000;
+		cursor: pointer;
+		width: 9rem;
+		background-color: #fff;
+		border: 0;
+		border-radius: 100px;
+		justify-content: center;
+		align-items: center;
+		margin: 0 1.5rem;
+		padding: 0.7rem 1rem;
+		font-family: Outfit,sans-serif;
+		font-size: .7rem;
+		font-weight: 400;
+		display: flex;
+		position: absolute;
+		top: 3vh;
+		box-shadow: -3px 4px 100px -11px grey;
+	}
+	.side_bar_container{
+		position: absolute;
+		top: 9.5vh;
+		left: 2rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-start;
+		z-index: 100;
+	}
+	.side_bar_title_prop{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: row;
+		font-family: 'Outfit', sans-serif;
+		font-weight: 400;
+		font-size: .7rem;
+		color: #858A8B;
+	}
+	.side_bar_contents_container{
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		/* margin-top: .6rem; */
+    /* margin-bottom: .1rem; */
+		font-weight: 400;
+		font-family: 'Outfit', sans-serif;
+	}
+	.side_bar_contents_emoji{
+		display: flex;
+		justify-content: center;
+		font-size: .7rem;
+		
+	}
+	.side_bar_contents_text{
+		font-size: .8rem;
+		margin-top: .2rem;
+	}
 	.footer_container{
 		width: 100%;
 		height: 100vh;
@@ -381,6 +472,7 @@ a:focus-visible {
 		align-items: center;
 		background-image: url("../img/footer_bg.svg");
 		background-size: cover;
+		margin-top: 100vh;
 	}
 	.footer_top_container{
 		width: 100%;
@@ -516,10 +608,40 @@ a:focus-visible {
 		margin-right: .3rem;
 		width: 50%;
 	}
+	.frame__title {
+		font-size: .8rem;
+		font-weight: 400;
+		margin: 0 0 2rem 0;
+		line-height: 1.2rem;
+		color: #858A8B;
+	}
 }
 
 
 @media screen and (min-width: 53em) {
+	.back_to_about{
+		/* opacity: 0; */
+		z-index: 1;
+		stroke: #000;
+		color: #282d2f;
+		z-index: 1000;
+		cursor: pointer;
+		width: 9rem;
+		background-color: #fff;
+		border: 0;
+		border-radius: 100px;
+		justify-content: center;
+		align-items: center;
+		margin: 0 1.5rem;
+		padding: 0.7rem 1rem;
+		font-family: Outfit,sans-serif;
+		font-size: .7rem;
+		font-weight: 400;
+		display: flex;
+		position: absolute;
+		top: 5vh;
+		box-shadow: -3px 4px 100px -11px grey;
+	}
 	.content {
 		width: 38%;
 	}
@@ -541,6 +663,7 @@ a:focus-visible {
 		align-items: center;
 		background-image: url("../img/footer_bg.svg");
 		background-size: cover;
+		margin-top: 100vh;
 	}
 	.footer_top_container{
 		width: 65%;
@@ -685,6 +808,7 @@ a:focus-visible {
 		justify-content: flex-end;
 		align-items: center;
 		z-index: 100;
+		padding-bottom: 2.7rem;
 	}
 	.side_bar_title_prop{
 		display: flex;
