--- a/src/css/base.css
+++ b/src/css/base.css
@@ -343,7 +343,7 @@ a:focus-visible {
 	color: #282d2f;
 	z-index: 1000;
 	cursor: pointer;
-	width: 10rem;
+	/* width: 10rem; */
 	background-color: #fff;
 	border: 0;
 	border-radius: 100px;
@@ -377,7 +377,7 @@ a:focus-visible {
 	color: #282d2f;
 	z-index: 1000;
 	cursor: pointer;
-	width: 9rem;
+	/* width: 9rem; */
 	background-color: #fff;
 	border: 0;
 	border-radius: 100px;
@@ -699,7 +699,7 @@ a:focus-visible {
 		align-items: center;
 		background-image: url("../img/footer_bg.svg");
 		background-size: cover;
-		margin-top: 100vh;
+		/* margin-top: 100vh; */
 	}
 	.footer_top_container{
 		width: 65%;
