--- a/src/css/base.css
+++ b/src/css/base.css
@@ -12,6 +12,9 @@
 html{
 	font-size: calc(12px + 0.37vw);
 }
+html, body{
+	cursor: none !important;
+}
 
 body {
 	margin: 0;
@@ -105,7 +108,7 @@ a:focus-visible {
   font-weight: bold;
 	z-index: 210;
 	pointer-events: none;
-	margin-left: -1rem;
+	margin-left: 1rem;
 	margin-top: -1rem;
 }
 
@@ -244,7 +247,7 @@ a:focus-visible {
 	background-position: 50% 50%;
 	width: 100%;
 	height: 100%;
-	cursor: pointer;
+	/* cursor: pointer; */
 }
 
 .content {
@@ -409,6 +412,9 @@ a:focus-visible {
 }
 
 @media screen and (max-width: 53em){
+	.grid--mini{
+		opacity: 1;
+	}
 	#cursor_sec{
 		display: none;
 	}
