--- a/src/css/base.css
+++ b/src/css/base.css
@@ -961,7 +961,7 @@ a:focus-visible {
 	.grid__cell-c4-r7 { grid-column: 4; grid-row: 7; }
 	.grid--mini {
 		visibility: visible;
-		position: relative;
+		/* position: relative; */
 	}
 	.content--open .grid--mini {
 		pointer-events: auto;
