--- a/src/css/base.css
+++ b/src/css/base.css
@@ -249,7 +249,7 @@ a:focus-visible {
 
 .grid__cell-img-inner {
 	background-size: cover;
-	background-position: 50% 50%;
+	background-position: center center;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
