--- a/src/css/base.css
+++ b/src/css/base.css
@@ -423,7 +423,7 @@ a:focus-visible {
 	pointer-events: auto;
 }
 
-@media screen and (max-width: 53em){
+@media screen and (max-width: 768px){
 	.mobile_show_grid_mini{
 		display: flex;
 		justify-content: center;
@@ -740,8 +740,327 @@ a:focus-visible {
 	}
 }
 
+@media screen and (min-width: 768px) {
+	.mobile_show_grid_mini{
+		display: none;
+	}
+	.mobile_show_grid_mini_prop{
+		display: none;
+	}
+	.back_to_about{
+		/* opacity: 0; */
+		stroke: #000;
+		color: #282d2f;
+		z-index: 999;
+		cursor: pointer;
+		background-color: #fff;
+		border: 0;
+		border-radius: 100px;
+		justify-content: center;
+		align-items: center;
+		margin: 0 1.5rem;
+		padding: 0.7rem 1rem;
+		font-family: Outfit,sans-serif;
+		font-size: .7rem;
+		font-weight: 400;
+		display: flex;
+		position: absolute;
+		top: 5vh;
+		box-shadow: -3px 4px 100px -11px grey;
+	}
+	.content {
+		width: 38%;
+	}
+	main{
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		align-items: flex-end;
+	}
+	/* footer */
+	.footer_container{
+		width: 100%;
+		height: 100vh;
+		z-index: 101;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background-image: url("../img/footer_bg.svg");
+		background-size: cover;
+		/* margin-top: 100vh; */
+	}
+	.footer_top_container{
+		width: 65%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 5rem;
+	}
+	.footer_title_container{
+		display: flex;
+		flex-direction: column;
+		width: 60%;
+		height: 100%;
+		margin-top: -2rem;
+	}
+	.footer_title_prop{
+		font-family: 'Outfit', sans-serif;
+		color: #DBDFE0;
+		font-size: 80px;
+		font-weight: 300;
+		line-height: 101px;
+		letter-spacing: 0em;
+		text-align: left;
+	}
+	.footer_nav_container{
+		display: flex;
+		flex-direction: column;
+		width: 30%;
+		height: 100%;
+		justify-content: flex-start;
+		align-items: flex-start;
+		margin-top: 2rem;
+	}
+	.footer_nav_prop{
+		font-family: 'Outfit', sans-serif;
+		color:#DBDFE0;
+		font-size: 1.4rem;
+		font-weight: 400;
+		line-height: 30px;
+		letter-spacing: 0em;
+		text-align: left;
+		transition: all .3s ease-in-out;
+	}
+	.footer_nav_prop:nth-child(2){
+		font-size: .9rem;
+	}
+	.footer_nav_prop:nth-child(3){
+		margin-top: 1.5rem;
+	}
+	.footer_nav_prop:nth-child(4){
+		margin-top: 7rem;
+		font-size: .9rem;
+		text-decoration: underline;
+	}
+	.footer_nav_prop:hover{
+		color: #858A8B;
+		transition: all .3s ease-in-out;
+		cursor: pointer;
+	}
 
-@media screen and (min-width: 53em) {
+	.footer_divider{
+		border-bottom: 1px #858A8B solid;
+		width: 65%;
+	}
+
+	.footer_bottom_container{
+		width: 65%;
+		height: 20%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: flex-end;
+		margin-top: 3rem;
+	}
+	.footer_copyright{
+		font-family: 'Outfit', sans-serif;
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 18px;
+		letter-spacing: 0em;
+		text-align: left;
+		color: #858A8B;
+		width: 70%;
+
+	}
+	.footer_author_container{
+		display: flex;
+		flex-direction: column;
+		width: 30%;
+	}
+	.footer_author_each_container{
+		display: flex;
+		flex-direction: column;
+		font-family: 'Outfit', sans-serif;
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 18px;
+		letter-spacing: 0em;
+		text-align: left;
+		color: #858A8B;
+		margin-top: 2rem;
+
+	}
+	.footer_responsibility{
+		
+
+	}
+	.footer_author_detailed_container{
+		display: flex;
+		flex-direction: row;
+		margin: .5rem 0;
+		justify-content: flex-start;
+		align-items: center;
+
+	}
+	.footer_author_emoji{
+		margin-right: .5rem;
+		font-size: 1.2rem;
+	}
+	.footer_author_name{
+		margin-right: .5rem;
+
+	}
+	.footer_url_container{
+		cursor: none !important;
+		pointer-events: none !important;
+
+	}
+	.footer_url_contents_prop{
+		margin-right: .5rem;
+
+	}
+
+	.side_bar_container{
+		width: 6%;
+		height: 100%;
+		position: fixed;
+		top: 0;
+		left: 0;
+		background-color: white;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		align-items: center;
+		z-index: 100;
+		padding-bottom: 2.7rem;
+	}
+	.side_bar_title_prop{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		writing-mode: vertical-lr;
+		width: 6%;
+		font-family: 'Outfit', sans-serif;
+		font-weight: 400;
+		font-size: .7rem;
+		color: #858A8B;
+		margin-bottom: 1.1rem;
+	}
+	.side_bar_contents_container{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top: .6rem;
+    margin-bottom: .1rem;
+		font-weight: 400;
+		font-family: 'Outfit', sans-serif;
+	}
+	.side_bar_contents_emoji{
+		display: flex;
+		justify-content: center;
+		font-size: 1.8rem;
+		
+	}
+	.side_bar_contents_text{
+		font-size: .8rem;
+		margin-top: .2rem;
+	}
+
+	.grid {
+		grid-template-columns: repeat(4,25%);
+		/* width: 94%; */
+	}
+	.grid__cell--padded {
+		padding: var(--grid-padding);
+	}
+	.grid__cell-c3-r2 { grid-column: 3; grid-row: 2; }
+	.grid__cell-c1-r3 { grid-column: 1; grid-row: 3; }
+
+	.grid__cell-c1-r1 { grid-column: 2; grid-row: 1; }
+	.grid__cell-c3-r1 { grid-column: 3; grid-row: 1; }
+	.grid__cell-c4-r1 { grid-column: 4; grid-row: 1; }
+	.grid__cell-c1-r2 { grid-column: 1; grid-row: 2; }
+	.grid__cell-c2-r2 { grid-column: 2; grid-row: 2; }
+	.grid__cell-c2-r2 { grid-column: 2; grid-row: 2; }
+	.grid__cell-c2-r3 { grid-column: 2; grid-row: 3; }
+	.grid__cell-c4-r3 { grid-column: 3; grid-row: 3; }
+	.grid__cell-c1-r4 { grid-column: 4; grid-row: 3; }
+	.grid__cell-c3-r4 { grid-column: 1; grid-row: 4; }
+	.grid__cell-c2-r4 { grid-column: 2; grid-row: 4; }
+	.grid__cell-c4-r4 { grid-column: 4; grid-row: 4; }
+	.grid__cell-c1-r5 { grid-column: 1; grid-row: 5; }
+	.grid__cell-c3-r5 { grid-column: 3; grid-row: 5; }
+	.grid__cell-c4-r5 { grid-column: 4; grid-row: 5; }
+	.grid__cell-c1-r6 { grid-column: 1; grid-row: 6; }
+	.grid__cell-c2-r6 { grid-column: 2; grid-row: 6; }
+	.grid__cell-c3-r6 { grid-column: 3; grid-row: 6; }
+	.grid__cell-c2-r7 { grid-column: 2; grid-row: 7; }
+	.grid__cell-c3-r7 { grid-column: 3; grid-row: 7; }
+	.grid__cell-c4-r7 { grid-column: 4; grid-row: 7; }
+	.grid--mini {
+		visibility: visible;
+		/* position: relative; */
+	}
+	.content--open .grid--mini {
+		pointer-events: auto;
+	}
+	body #cdawrap {
+		position: relative;
+		margin-top: auto;
+        --cda-left: auto;
+        --cda-right: auto;
+        --cda-width: 300px;
+        --cda-bottom: auto;
+        --cda-top: auto;
+        opacity: 1 !important;
+        pointer-events: auto;
+        z-index: 1;
+    }
+
+    body #cdawrap .cda-footer {
+        display: none;
+    }
+
+    body #cdawrap .cda-text {
+        color: transparent !important;
+        height: 1.25rem;
+        pointer-events: none;
+        position: relative;
+        text-align: left;
+    }
+
+    body #cdawrap .cda-text::before {
+        color: var(--color-text);
+        content: "Sponsored by "attr(data-sponsor);
+        font-size: 0.85rem;
+        font-weight: 500;
+        left: 0;
+        pointer-events: auto;
+        position: absolute;
+        top: 0;
+        opacity: 0.5;
+        transition: opacity 0.4s;
+    }
+
+    .grid[style*="pointer-events: none;"] .frame #cdawrap .cda-text::before {
+    	opacity: 0 !important;
+    }
+
+    body #cdawrap:hover .cda-text::before {
+        color: var(--color-link-hover);
+    }
+
+    body #cdawrap a::after {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 992px) {
 	.mobile_show_grid_mini{
 		display: none;
 	}
