--- a/src/css/base.css
+++ b/src/css/base.css
@@ -789,12 +789,11 @@ a:focus-visible {
 		align-items: center;
 		background-image: url("../img/footer_bg.svg");
 		background-size: cover;
-		/* margin-top: 100vh; */
 	}
 	.footer_top_container{
-		width: 65%;
+		width: 100%;
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
 		margin-bottom: 5rem;
@@ -802,23 +801,26 @@ a:focus-visible {
 	.footer_title_container{
 		display: flex;
 		flex-direction: column;
-		width: 60%;
+		width: 75%;
 		height: 100%;
-		margin-top: -2rem;
+		margin-top: 3rem;
 	}
 	.footer_title_prop{
+		display: flex;
+		flex-direction: row;
 		font-family: 'Outfit', sans-serif;
 		color: #DBDFE0;
-		font-size: 80px;
+		font-size: 2rem;
+		/* margin: 1rem 0; */
 		font-weight: 300;
-		line-height: 101px;
+		line-height: 2.5rem;
 		letter-spacing: 0em;
 		text-align: left;
 	}
 	.footer_nav_container{
 		display: flex;
 		flex-direction: column;
-		width: 30%;
+		width: 75%;
 		height: 100%;
 		justify-content: flex-start;
 		align-items: flex-start;
@@ -827,7 +829,7 @@ a:focus-visible {
 	.footer_nav_prop{
 		font-family: 'Outfit', sans-serif;
 		color:#DBDFE0;
-		font-size: 1.4rem;
+		font-size: 1rem;
 		font-weight: 400;
 		line-height: 30px;
 		letter-spacing: 0em;
@@ -835,15 +837,16 @@ a:focus-visible {
 		transition: all .3s ease-in-out;
 	}
 	.footer_nav_prop:nth-child(2){
-		font-size: .9rem;
+		font-size: .7rem;
 	}
 	.footer_nav_prop:nth-child(3){
-		margin-top: 1.5rem;
+		/* margin-top: 1.5rem; */
 	}
 	.footer_nav_prop:nth-child(4){
-		margin-top: 7rem;
+		/* margin-top: 7rem; */
 		font-size: .9rem;
 		text-decoration: underline;
+		margin-top: 2rem;
 	}
 	.footer_nav_prop:hover{
 		color: #858A8B;
@@ -853,45 +856,45 @@ a:focus-visible {
 
 	.footer_divider{
 		border-bottom: 1px #858A8B solid;
-		width: 65%;
+		width: 75%;
 	}
 
 	.footer_bottom_container{
-		width: 65%;
+		width: 100%;
 		height: 20%;
 		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: flex-end;
+		flex-direction: column-reverse;
+		justify-content: center;
+		align-items: center;
 		margin-top: 3rem;
 	}
 	.footer_copyright{
 		font-family: 'Outfit', sans-serif;
-		font-size: 14px;
+		font-size: .7rem;
 		font-weight: 400;
 		line-height: 18px;
 		letter-spacing: 0em;
 		text-align: left;
 		color: #858A8B;
-		width: 70%;
+		width: 75%;
 
 	}
 	.footer_author_container{
 		display: flex;
 		flex-direction: column;
-		width: 30%;
+		width: 75%;
 	}
 	.footer_author_each_container{
 		display: flex;
 		flex-direction: column;
 		font-family: 'Outfit', sans-serif;
-		font-size: 14px;
+		font-size: .7rem;
 		font-weight: 400;
 		line-height: 18px;
 		letter-spacing: 0em;
 		text-align: left;
 		color: #858A8B;
-		margin-top: 2rem;
+		margin-top: 1rem;
 
 	}
 	.footer_responsibility{
@@ -901,27 +904,25 @@ a:focus-visible {
 	.footer_author_detailed_container{
 		display: flex;
 		flex-direction: row;
-		margin: .5rem 0;
+		margin: .3rem 0;
 		justify-content: flex-start;
 		align-items: center;
 
 	}
 	.footer_author_emoji{
-		margin-right: .5rem;
-		font-size: 1.2rem;
+		margin-right: .3rem;
+		font-size: .7rem;
 	}
 	.footer_author_name{
-		margin-right: .5rem;
+		margin-right: .3rem;
 
 	}
 	.footer_url_container{
-		cursor: none !important;
-		pointer-events: none !important;
 
 	}
 	.footer_url_contents_prop{
-		margin-right: .5rem;
-
+		margin-right: .3rem;
+		width: 50%;
 	}
 
 	.side_bar_container{
