--- a/src/css/base.css
+++ b/src/css/base.css
@@ -741,6 +741,9 @@ a:focus-visible {
 }
 
 @media screen and (min-width: 768px) {
+	#cursor_sec{
+		display: none;
+	}
 	.mobile_show_grid_mini{
 		display: none;
 	}
